<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/setting" android:icon="@drawable/ic_setting" android:title="@string/setting"  app:cnb_iconColor="@color/md_green_200"/>/>


    <item android:id="@+id/cities" android:icon="@drawable/cities" android:title="@string/Cities" app:cnb_iconColor="@color/md_green_400"/>
    <item android:id="@+id/home" android:icon="@drawable/home" android:title="@string/Home" app:cnb_iconColor="@color/md_light_green_A700"/>


    <item android:id="@+id/moshaver" android:icon="@drawable/counselor" android:title="@string/moshaver" app:cnb_iconColor="@color/md_green_400"/>

    <item android:id="@+id/profile" android:icon="@drawable/ic_user" android:title="@string/Profile" app:cnb_iconColor="@color/md_green_200" />


</menu>